# goto

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: audit.yml  rust.yml
hooks/: on-add
src/: args.rs  bookmark.rs  cfg.rs  cmd.rs  dbg.rs  git.rs  io.rs  main.rs  migrate.rs  tag.rs
