[package]
name = "goto"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = "2"
structopt = "0.3"
itertools = "0.10"
regex = "1.3"
log = "0.4"
env_logger = "0.8"
termcolor = "1.1"
lazy_static = "1.4"
url = { version = "2", features = ["serde"] }
walkdir = "2"
dirs-next = "2.0"
sha2 = "0.9"
dialoguer = "0.8"
open = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[build-dependencies]
built = { version = "0.4", features = ["git2"] }

[profile.release]
lto = true
