[package]
name = "goto"
version = "0.3.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "3.2", features = ["cargo", "color", "derive", "suggestions"] }
itertools = "0.10"
regex = "1.5"
log = "0.4"
env_logger = "0.8"
lazy_static = "1.4"
url = { version = "2", features = ["serde"] }
walkdir = "2"
dirs-next = "2.0"
sha2 = "0.9"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
open = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_yaml = "0.9"
#libgit2-sys = "0.13.5"

[features]
default = ["migrate"]
migrate = ["dep:serde_json"]

[build-dependencies]
built = { version = "0.5", features = ["git2"] }

[profile.release]
lto = true
